# cdDB

./: .clippy.toml  .covopt.toml  .covopt_tuned.env  .gitignore  Cargo.toml  PERF.md  PerformanceReport.md  ReadMe.md  SPEC.md  analysis_results.md  audit_report.md  default.profdata  default.profraw  dhat-heap.json  libscratch.rlib  multi.lcov  perf_report.md  run_test.sh  scratch.rs  update_perf.sh  with_filter.lcov
.covopt/: advise_cache.json
benches/: Cargo.toml  capex.rs  engine_bench.rs  latency.rs  memory.rs  profiling.rs  sqlite_comp.rs  throughput.rs
benches/src/: capex.rs  cold_data_benchmark.rs  latancy.rs  memory.rs  read_benchmark.rs  read_pressure_benchmark.rs  throughput.rs
examples/: it_ops_demo.rs
ops_data/system/: metrics.wal
scratch/: test_recovery.rs
src/: agent.rs  bloom.rs  cache.rs  column.rs  commands.rs  dispatcher.rs  dualcache_stub.rs  facade.rs  lib.rs  main.rs  ml.rs  ops.rs  partition.rs  platform.rs  qsbr.rs  query.rs  queue.rs  storage.rs  unsafe_core.rs  wal.rs
src/core/: bloom.rs  column.rs  commands.rs  hot_index.rs  map.rs  mod.rs  qsbr.rs  query.rs  queue.rs  rcu.rs
src/core/no_std/: mod.rs
src/core/std/: mod.rs
src/engine/: archive.rs  dispatcher.rs  facade.rs  index.rs  mod.rs  partition.rs  reader.rs  simple_kv.rs  typed_cache.rs
src/io/: audit.rs  mod.rs  platform.rs  storage.rs  wal.rs
src/sync/: map.rs  mod.rs  no_std.rs  rcu.rs  std_impl.rs
tests/: Cargo.toml  async_test.rs  cold_data_benchmark.rs  commands_test.rs  covopt_audit.rs  delete_test.rs  durability_tests.rs  engine_bench.rs  facade_tests.rs  integration_tests.rs  loom_tests.rs  memory_leak_test.rs  metrics_warmup_tests.rs  olap_test.rs  read_benchmark.rs  read_pressure_benchmark.rs  sleep_overhead.rs  wal_replay_test.rs
tests/cdDB-test/: Cargo.toml
tests/cdDB-test/data/columnar/benchmark/: columnar.wal
tests/cdDB-test/data/hot/hot/: partition.wal
tests/cdDB-test/data/serial/benchmark/: batch.wal  serial.wal
tests/cdDB-test/src/: main.rs
tests/src/: memory_leak_test.rs  olap_test.rs
tool/: asm_scan.py  run_test.sh
