

[package]
name = "cdDB"
version = "1.1.0"
edition = "2024"
license = "MIT"
authors = ["hianova"]
description = "A high-performance asynchronous tiered storage engine for cold data acceleration."
readme = "ReadMe.md"
repository = "https://github.com/hianova/cdDB"
keywords = ["storage", "async", "tiered-storage", "dod", "monitoring"]
categories = ["database-implementations", "data-structures"]
exclude = [".DS_Store", "/target"]


[lib]
name = "cdDB"
path = "src/lib.rs"
doctest = false


[dev-dependencies]
hdrhistogram = "7.5"
rand_distr = "0.4"

crossbeam-utils = "0.8"
rand = "0.8"
tempfile = "3.10"


[[bench]]
name = "engine_bench"
harness = false
required-features = ["std"]



[profile.profiling]
inherits = "release"
debug = true


[dependencies]
no_std_tool = { path = "../../core/no_std_tool", version = "1.1.0" }
dualcache-ff = { path = "../../storage/DualCache-FF", version = "1.1.0", optional = true, default-features = false }
tokio = { workspace = true, features = ["sync", "rt"], optional = true }
memmap2 = { version = "0.9", optional = true }


[features]
default = ["std", "dualcache-ff"]
std = ["dualcache-ff?/std", "dep:memmap2"]
dualcache-ff = ["dep:dualcache-ff"]
async = ["dep:tokio", "std"]
covopt = []

[profile.release]
codegen-units = 1
panic = "abort"

[profile.test]
debug = true
panic = "abort"

[profile.dev]
debug = false
panic = "abort"

