[package]
name = "cdDB-benches"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cdDB = { path = ".." }
criterion = "0.5"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
ahash = "0.8"

[[bench]]
name = "throughput"
path = "src/throughput.rs"
harness = false

[[bench]]
name = "latancy"
path = "src/latancy.rs"
harness = false

[[bench]]
name = "memory"
path = "src/memory.rs"
harness = false

[[bench]]
name = "capex"
path = "src/capex.rs"
harness = false

[[test]]
name = "read_benchmark"
path = "src/read_benchmark.rs"

[[test]]
name = "read_pressure_benchmark"
path = "src/read_pressure_benchmark.rs"

[[test]]
name = "cold_data_benchmark"
path = "src/cold_data_benchmark.rs"
