[package]
name = "cdDB-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cdDB = { path = ".." }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dhat = "0.3.3"

[[test]]
name = "olap_test"
path = "src/olap_test.rs"

[[test]]
name = "memory_leak_test"
path = "src/memory_leak_test.rs"
